<resources>
    <string name="app_name">Happy Pets</string>
    <string name="bottom_nav_predict">Predict</string>
    <string name="bottom_nav_breeds">Breeds</string>
    <string name="bottom_nav_about">About</string>

    <string name="btn_select_camera">Take a picture</string>
    <string name="btn_select_gallery">Select from gallery</string>
    <string name="btn_send_feedback">Send Feedback</string>
    <string name="btn_add_feedback">Add Feedback</string>

    <string name="img_prediction_result">Predicted image result</string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="dog_type">Dog type</string>
    <string name="expand_collapse_button">Expand/Collapse button</string>
    <string name="cat_type">Cat type</string>
    <string name="breed_image">Breed Image</string>
    <string name="wikipedia_link">Wikipedia Link</string>
    <string name="icon_hyperlink">Icon (Hyperlink)</string>
</resources>
