<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    tools:context=".ui.fragments.BreedListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/view_cat_breed"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/selector_clickable_view"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_cat_breed"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="false"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/cat_type"
                    app:srcCompat="@drawable/ic_cat_head" />

                <ImageView
                    android:id="@+id/img_expcol_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/expand_collapse_button"
                    android:tint="@color/gray"
                    app:srcCompat="@android:drawable/arrow_down_float" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/img_cat_breed"
                    android:layout_toStartOf="@id/img_expcol_cat"
                    android:text="@string/cats"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/view_dog_breed"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/rv_cat_breeds"
                android:background="@drawable/selector_clickable_view"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_dog_breed"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="false"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/dog_type"
                    app:srcCompat="@drawable/ic_dog_head" />

                <ImageView
                    android:id="@+id/img_expcol_dog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/img_dog_breed"
                    android:contentDescription="@string/expand_collapse_button"
                    android:tint="@color/gray"
                    app:srcCompat="@android:drawable/arrow_down_float" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/img_dog_breed"
                    android:layout_toStartOf="@id/img_expcol_dog"
                    android:text="@string/dogs"
                    android:textSize="18sp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cat_breeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_cat_breed"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/rv_row_breed" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_dog_breeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_dog_breed"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/rv_row_breed" />

        </RelativeLayout>
    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
