<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/breed_image"
            tools:srcCompat="@tools:sample/avatars[14]" />

        <TextView
            android:id="@+id/tv_breed_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_breed"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            tools:text="Australian Cat" />

        <TextView
            android:id="@+id/tv_breed_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_breed_name"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            tools:text="The Australian Cat (formerly known as the Aussie cat) is a breed of cat developed in Australia. It is a cross between Australia and a cat." />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_breed_desc"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="0dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/icon_hyperlink"
                android:tint="@color/hyperlink"
                app:srcCompat="@drawable/ic_link" />

            <Button
                android:id="@+id/btn_wiki_link"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:text="@string/wikipedia_link"
                android:textAllCaps="false"
                android:textColor="@color/hyperlink"
                android:textColorHighlight="@color/hyperlink"
                android:textColorHint="@color/hyperlink"
                android:textColorLink="@color/hyperlink" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
