<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PredictResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/colorPrimary"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_prediction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img_prediction_result"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/avatars[1]" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_prediction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/rv_row_prediction" />

        <LinearLayout
            android:id="@+id/container_btn_add_feedback"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_button_gray"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/img_add_feedback_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:background="@color/transparent"
                android:clickable="false"
                android:contentDescription="@string/btn_add_feedback"
                android:src="@drawable/ic_add"
                android:tint="@color/colorPrimary" />

            <TextView
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/tv_add_feedback"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:background="@color/transparent"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/btn_add_feedback"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_btn_send_feedback"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/selector_button_primary"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/img_send_feedback_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:background="@color/transparent"
                android:clickable="false"
                android:contentDescription="@string/btn_send_feedback"
                android:src="@drawable/ic_reply"
                android:tint="@color/white" />

            <TextView
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/tv_send_feedback"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:background="@color/transparent"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/btn_send_feedback"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
